@@ -2,6 +2,9 @@ package org.ztemplates.web.script.zscript;
 
 import java.io.Serializable;
 
+import org.springframework.stereotype.Component;
+import org.springframework.web.context.WebApplicationContext;
+import org.springframework.web.context.support.WebApplicationContextUtils;
 import org.ztemplates.web.ZTemplates;
 
 public class ZJavaScriptAnnotationDefinition implements Serializable, ZIJavaScriptDefinition
@@ -45,6 +48,27 @@ public class ZJavaScriptAnnotationDefinition implements Serializable, ZIJavaScri
   public String getContent() throws Exception
   {
     Object instance = clazz.newInstance();
+    Component comp = (Component) clazz.getAnnotation(Component.class);
+    if (comp != null)
+    {
+      WebApplicationContext ctx = WebApplicationContextUtils
+          .getRequiredWebApplicationContext(ZTemplates.getServletService().getRequest().getSession().getServletContext());
+      String name = comp.value();
+      if (name.length() > 0)
+      {
+        return ctx.getBean(name, clazz);
+      }
+      else
+      {
+        return ctx.getBean(clazz);
+      }
+
+    }
+    else
+    {
+      clazz.newInstance();
+    }
+
     return ZTemplates.getRenderService().render(instance);
   }
 
